objects/CommandCenter__RM_Stages__mdt.object
<CustomObject>
    <fields>
        <fullName>CommandCenter__Applicable_Orgs__c</fullName>
        <label>Applicable Orgs</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CommandCenter__Order__c</fullName>
        <label>Order</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CommandCenter__Stage_Level__c</fullName>
        <label>Stage Level</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CommandCenter__Stage_Name__c</fullName>
        <label>Stage Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Stages</label>
    <pluralLabel>Stagess</pluralLabel>
</CustomObject>